Setup dependency injection framework

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.viktorrusu.kmmmovies.android">
 
     <application
+        android:name=".MoviesApp"
         android:allowBackup="false"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
