Add InputField and SearchInputField compoents

--- a/.detekt/config.yml
+++ b/.detekt/config.yml
@@ -82,6 +82,7 @@ complexity:
     functionThreshold: 6
     constructorThreshold: 6
     ignoreDefaultParameters: false
+    ignoreAnnotated: ['Composable']
   MethodOverloading:
     active: false
     threshold: 6
